--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 			<h1><i class="fas fa-folder-tree" style="margin-right: 5px;"></i>Projects</h1>
 			<ul class="linkset">
 				<a href="">
-					<a href="https://github.com/CarterBartlett/discordpy" target="_blank">
-						<li><i class="fas fa-sitemap"></i>Portfolio Site</li>
-						<a href="https://github.com/CarterBartlett/portfolio" target="_blank">
-							<li><i class="fab fa-discord"></i>A - Discord Bot</li>
+					<a href="https://github.com/CarterBartlett/carterbartlett.github.io" target="_blank">
+						<li><i class="fas fa-sitemap"></i>Portfolio Site (this site!)</li>
+						<a href="https://github.com/CarterBartlett/discord-ontos" target="_blank">
+							<li><i class="fab fa-discord"></i>Discord Ontos - Discord Bot</li>
 						</a>
 			</ul>
 		</section>
