--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<main>
 		<!-- Header -->
 		<header>
-			<img src="https://placehold.co/200" alt="Profile Image" style="border-radius: 50%; margin-bottom: 10px;">
+			<img src="https://avatars.githubusercontent.com/u/5764220" width="200" alt="Profile Image" style="border-radius: 50%; margin-bottom: 10px;">
 			<div>
 				<h1>Carter Bartlett</h1>
 				<p>
