Update licensing information in README.md and index.html to reflect The Unlicense

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<!-- Projects -->
 		<section>
 			<h1><i class="fas fa-folder-tree" style="margin-right: 5px;"></i>Projects</h1>
-			<p><i>All of my projects are licensed under Creative Commons Zero licensing. You are free to use, modify and distribute them as you wish, even without attribution and for commercial purposes (though I would appreciate a shout-out!).</i></p>
+			<p><i>All of my projects are licensed under <a href="https://unlicense.org/">The Unlicense</a>. You are free to use, modify and distribute them as you wish, even without attribution and for commercial purposes (though I would appreciate a shout-out!).</i></p>
 			<ul class="linkset">
 				<a href="https://github.com/CarterBartlett/carterbartlett.github.io" target="_blank">
 					<li><i class="fas fa-sitemap"></i>Portfolio Site (this site!)</li>
