Fix HTML structure for project links in index.html

--- a/index.html
+++ b/index.html
@@ -39,9 +39,12 @@
 			<ul class="linkset">
 				<a href="https://github.com/CarterBartlett/carterbartlett.github.io" target="_blank">
 					<li><i class="fas fa-sitemap"></i>Portfolio Site (this site!)</li>
-					<a href="https://github.com/CarterBartlett/discord-ontos" target="_blank">
-						<li><i class="fab fa-discord"></i>Discord Ontos - Discord Bot</li>
-					</a>
+				</a>
+				<a href="https://github.com/CarterBartlett/discord-ontos" target="_blank">
+					<li><i class="fab fa-discord"></i>Discord Ontos - Discord Bot</li>
+				</a>
+				<a href="/dnd-toolkit" target="_blank">
+					<li><i class="fa-solid fa-dice"></i>D&D Toolkit</li>
 				</a>
 			</ul>
 		</section>
