--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					<li><i class="fab fa-discord"></i>Discord Ontos - Discord Bot</li>
 				</a>
 				<a href="/dnd-toolkit" target="_blank">
-					<li><i class="fa-solid fa-dice"></i>D&D Toolkit</li>
+					<li><i class="fa-solid fa-dice-d20"></i>D&D Toolkit</li>
 				</a>
 			</ul>
 		</section>
