Added local snippet manager

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
 				<a href="/dnd-toolkit" target="_blank">
 					<li><i class="fa-solid fa-dice-d20"></i>D&D Toolkit</li>
 				</a>
+				<a href="/localsnippetmanager" target="_blank">
+					<li><i class="fa-solid fa-code"></i>Snippet Manager</li>
+				</a>
 			</ul>
 		</section>
 
